pkg/provider/kubernetes/ingress/fixtures/v18-Ingress-with-ingressClasses-filter_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing
spec:
  ingressClassName: traefik-lb
  rules:
  - http:
      paths:
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing
spec:
  ingressClassName: traefik-lb2
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              serviceName: service1
              servicePort: 80
